@@ -1186,6 +1186,9 @@ MODULE_SCOPE Status TkParseColor (Display * display,
 				Colormap map, CONST char* spec,
 				XColor * colorPtr);
 #endif
+#ifdef HAVE_XFT
+MODULE_SCOPE void	TkUnixSetXftClipRegion(Region clipRegion);
+#endif
 
 /*
  * Unsupported commands.
